[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/dark_animation.png" type="Texture" id=1]
[ext_resource path="res://src/DarkBog.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/bass.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 123.048, 70.5931 )

[node name="DarkBog" type="KinematicBody2D"]
scale = Vector2( 50, 50 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "jump"
playing = true

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -3.80312, -4.80168, -2.82096, -5.83996, 1.92144, -5.89608, 3.85768, -3.87565, 4.8679, -1.77104, 5.03627, 2.85912, 5.82199, 3.08361, 5.85006, 4.85149, 5.00821, 5.97395, -5.00976, 5.91783, -5.12201, 3.08361, -5.87967, 2.9433, -5.85161, -3.08993 )

[node name="MeleeAttack" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MeleeAttack"]
polygon = PoolVector2Array( -5.59906, -4.29658, -2.98933, -6.45731, 2.28624, -6.37313, 5.51332, -1.93941, 6.52353, 3.50453, 5.17658, 6.19844, -5.40263, 6.28263, -6.32866, 2.85912, -6.4409, -3.51085 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 0.786926, -6.61456 )
shape = SubResource( 7 )

[node name="SoundDie" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 3 )

[connection signal="body_entered" from="MeleeAttack" to="." method="_on_MeleeAttack_body_entered"]
[connection signal="body_exited" from="MeleeAttack" to="." method="_on_MeleeAttack_body_exited"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
